--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-nice-avatar": "^1.5.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
